--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,8 @@
 	  <mat-chip-list>
 		    <mat-chip color="accent" selected="false" routerLink="/dashboard">Dashboard</mat-chip>
 		    <mat-chip color="accent" selected="false" routerLink="/srequest">Request</mat-chip>
-		    <mat-chip color="accent" selected="false" routerLink="/kiuwan">Kiuwan</mat-chip>
+				<mat-chip color="accent" selected="false" routerLink="/kiuwan">Kiuwan</mat-chip>
+				<mat-chip color="accent" selected="false" routerLink="/kiuwandata">Kiuwan Dashboard</mat-chip>
 		</mat-chip-list>
 	  </mat-toolbar-row>
 </mat-toolbar>
@@ -18,7 +19,6 @@
 
 <alert></alert>
 <router-outlet></router-outlet>
-<!-- <div class="footer"> -->
 <div>
 	<app-messages></app-messages>
 </div>
