--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,94 +1,8 @@
-/* [class*='col-'] { */
-/* 	float: left; */
-/* 	padding-right: 20px; */
-/* 	padding-bottom: 20px; */
-/* } */
-
-/* [class*='col-']:last-of-type { */
-/* 	padding-right: 0; */
-/* } */
-
-/* a { */
-/* 	text-decoration: none; */
-/* } */
-
-/* *, *:after, *:before { */
-/* 	-webkit-box-sizing: border-box; */
-/* 	-moz-box-sizing: border-box; */
-/* 	box-sizing: border-box; */
-/* } */
-
-
-
-
-/* .grid { */
-/* 	margin: 0; */
-/* } */
-
-/* .col-1-4 { */
-/* 	width: 25%; */
-/* } */
-
-/* .col-1-2 { */
-/* 	width: 50%; */
-/* } */
-
-/* .module { */
-/* 	padding: 20px; */
-/* 	text-align: center; */
-/* 	color: #eee; */
-/* 	max-height: 120px; */
-/* 	min-width: 120px; */
-/* 	background-color: #607D8B; */
-/* 	border-radius: 2px; */
-/* } */
-
-/* .module:hover { */
-/* 	background-color: #EEE; */
-/* 	cursor: pointer; */
-/* 	color: #607d8b; */
-/* } */
-
-/* .grid-pad { */
-/* 	padding: 10px 0; */
-/* } */
-
-/* .grid-pad>[class*='col-']:last-of-type { */
-/* 	padding-right: 20px; */
-/* } */
-
-/* @media ( max-width : 600px) { */
-/* 	.module { */
-/* 		font-size: 10px; */
-/* 		max-height: 75px; */
-/* 	} */
-/* } */
-
-/* @media ( max-width : 1024px) { */
-/* 	.grid { */
-/* 		margin: 0; */
-/* 	} */
-/* 	.module { */
-/* 		min-width: 60px; */
-/* 	} */
-/* } */
-
-/* card styles */
-
-/* .example-card { */
-/* 	min-width: 400px; */
-/* 	max-width: 400px; */
-/* } */
-
-/* .example-header-image { */
-/* 	background-image: */
-/* 		url('https://img00.deviantart.net/ecd9/i/2012/022/9/a/homer_simpson_by_valhallaseven-d4nb6t8.jpg'); */
-/* 	background-size: cover; */
-/* } */
 
 .graph-card {
 	width: 92%; 
 	align-self : center;
+	vertical-align: top;
  	span: 5px;
 	
 }
