--- a/src/styles.css
+++ b/src/styles.css
@@ -4,34 +4,23 @@
 
 @import "./../node_modules/font-awesome/css/font-awesome.min.css";
 @import "./../node_modules/primeng/resources/themes/omega/theme.css";
+
 @import "./../node_modules/primeng/resources/primeng.min.css";
 
- 
-  
-  
 
 	/*  @aaa  Angular Material*/
-h1 {
-	color: #369;
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 250%;
-}
+/* h1 { */
+/* 	color: #369; */
+/* 	font-family: Arial, Helvetica, sans-serif; */
+/* 	font-size: 250%; */
+/* } */
 
-h2, h3 {
-	color: #444;
-	font-family: Arial, Helvetica, sans-serif;
-	font-weight: lighter;
-}
+/* h2, h3 { */
+/* 	color: #444; */
+/* 	font-family: Arial, Helvetica, sans-serif; */
+/* 	font-weight: lighter; */
+/* } */
 
-body {
-	margin: 2em;
-}
-
-body, input[text], button {
-	color: #888;
-	font-family: Cambria, Georgia;
-}
-/* everywhere else */
-* {
-	font-family: Arial, Helvetica, sans-serif;
-}
+/* body { */
+/* 	margin: 2em; */
+/* } */
