--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -16,7 +16,7 @@
         </div> 
         -->
 
-        <mat-form-field class="full-width">
+        <mat-form-field class="example-full-width">
            
             <input  appearance="legacy" matInput type="text"  placeholder="First Name"  maxLength="100" required 
                 [(ngModel)]="model.firstName"  [formControl]="firstNameFormControl" [errorStateMatcher]="matcher">
