End of I  S B  A   N   KK  development
Sacabo!

--- a/src/app/kiuwan-data/kiuwan-data.component.html
+++ b/src/app/kiuwan-data/kiuwan-data.component.html
@@ -3,6 +3,6 @@
 <p>startload : {{kiuwanDataStatus.startload}}</p>
 <p>endload : {{kiuwanDataStatus.endload}}</p>
 
-<button *ngIf="kiuwanDataStatus.status ===   'notloaded'"  (click)="loadData()">load kiuwan data</button>
+<button *ngIf="kiuwanDataStatus.status ===   'notloaded'"  (click)="loadKiuwanData()">load kiuwan data</button>
 <button  (click)="getStatus()">refresh</button>
 
